--- a/index.html
+++ b/index.html
@@ -64,6 +64,17 @@
     </div>
   </div>
 </div>
+
+<div class="container col-xs-5 col-sm-7 col-md-8 col-lg-12" id="tt-aln" align="center">
+  Relatórios
+
+  <div id="fase1" class="container"><a href="./bin/IPM_Fase1.pdf">Fase 1</a></div>
+  <div id="fase1" class="container"><a href="./bin/IPM_Fase2.pdf">Fase 2</a></div>
+  <div id="fase1" class="container"><a href="./bin/IPM_Fase3.pdf">Fase 3.1</a></div>
+  <div id="fase1" class="container"><a href="./bin/IPM-Fase-3-Feedback.pdf">Fase 3.2</a></div>
+  <div id="fase1" class="container"><a href="./bin/IPM_Fase4.pdf">Fase 4</a></div>
+  <div id="fase1" class="container"><a href="./bin/IPM-Fase5.pdf">Fase 5</a></div>
+</div>
 </body>
 
 <footer></footer>
