--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
   <div id="fase1" class="container"><a href="./bin/IPM_Fase4.pdf">Fase 4</a></div>
   <div id="fase1" class="container"><a href="./bin/IPM-Fase5.pdf">Fase 5</a></div>
 </div>
+	
+	<div class="container col-xs-5 col-sm-7 col-md-8 col-lg-12" id="tt-aln" align="center>
+		Available at @ http://fctunisports.x10host.com/								       
+	</div>
 </body>
 
 <footer></footer>
