--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </div>
 	
 	<div class="container col-xs-5 col-sm-7 col-md-8 col-lg-12" id="tt-aln" align="center">
-		Available at @ http://fctunisports.x10host.com/								       
+		Available @ <a href="http://fctunisports.x10host.com/"> http://fctunisports.x10host.com/</a>								       
 	</div>
 </body>
 
